[package]
name = "ckia"
version = "123.0.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/coderedart/ckia.git"
repository = "https://github.com/coderedart/ckia.git"
documentation = "https://docs.rs/ckia"

[features]
default = ["static_linking", "mlua"]
mlua = ["dep:mlua"]
# by default, we will try to download pre-built libs from github
# but this feature will disable that
no_pre_built_libs = []
# by default, if we fail to download pre-build libs (or above feature is enabled< we build from src.
# This feature will disable building from src
disable_build_from_src = []

disable_embedding_icudtl_dat = []
# This tells skia to use dynamic linking. download shared lib files or build from src. 
# If this is disabled, then we will use static linking which is what the majority want in the defualt case. 
component_build = []
# when you just care about structs and fn signatures, you can disable this feature. we won't build or link anything. 
# this is really useful when you are building wasm plugins, and the host will provide the actual bindings when instantiating your wasm plugin
static_linking = []
# by default, we will place build artifact downloads in user cache dir, to avoid redownloading after cargo clean
# you can use this to disable that behavior
disable_caching_downloads_in_user_cache = []


[dependencies]
paste = { version = "*" }
mlua = { version = "0.9", features = ["luau"], optional = true }
heck = { version = "*" }
[dev-dependencies]
glfw = { version = "*" }
glow = { version = "*" }
mlua = { version = "0.9", features = ["luau"] }
